Update AwsCodeCommitCredentialProvider.java
Fixed the spaces